Consultant service JWT filter test fix and Updated Test Cases